--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="fluid">
+	<div class= "row">
+		<div class="col-sm-4">
+			<img src="https://d3dyfaf3iutrxo.cloudfront.net/general/upload/ff4bf149638448439eebb6e5d4d3e6a9.png">
+		</div>
+		<div class="col-sm-4">
+			<img src="https://d3dyfaf3iutrxo.cloudfront.net/general/upload/ff4bf149638448439eebb6e5d4d3e6a9.png">
+		</div>
+		<div class="col-sm-4">
+			<img src= "https://d3dyfaf3iutrxo.cloudfront.net/general/upload/ff4bf149638448439eebb6e5d4d3e6a9.png">
+		</div>
+	</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
