--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="contaier-fluid">
+	<div class="container-fluid">
 	<div class= "row">
 		<div class="col-sm-4">
 			<img src="https://d3dyfaf3iutrxo.cloudfront.net/general/upload/ff4bf149638448439eebb6e5d4d3e6a9.png">
